Integrasi rekin dengan penetapan PK rekin